<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".AboutUS">

    <TextView
        android:id="@+id/aboutus_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/aboutus_head" />

    <TextView
        android:id="@+id/aboutus_data1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/aboutus_data" />

    <TextView
        android:id="@+id/aboutus_data2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/aboutus_data2" />
    <TextView
        android:id="@+id/teamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/teamname" />

    <TextView
        android:id="@+id/teamEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/emailID"
        android:textColor="#3F51B5"
        android:textSize="20sp" />
</LinearLayout>