<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Tip_screen">

    <LinearLayout
        android:id="@+id/linear_head"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/tip_imsge"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/aboutus_head"
            tools:src="@drawable/loading_image"/>

        <TextView
            android:id="@+id/tip_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wait_lb"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:id="@+id/linear_child"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/back_bt"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner"
                android:text="@string/back_lb"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <Button
                android:id="@+id/next_bt"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_corner"
                android:text="@string/next_lb"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>